<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginBottom="30sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_gravity="left"
            android:layout_marginBottom="30sp"
            app:srcCompat="@drawable/hamburguesa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/kaushan"
            android:text="@string/app_mensaje"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/SpTipoHamburguesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/EtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:hint="@string/app_cantidad" />

    <Spinner
        android:id="@+id/SpTipoPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/app_calcular" />

    <Button
        android:id="@+id/btNuevo"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/app_nuev" />

    <Button
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/delicius"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:onClick="salir"
        android:text="@string/app_salir" />

</LinearLayout>